fix: z-index for modal

--- a/components/modal.css
+++ b/components/modal.css
@@ -1,5 +1,5 @@
 .modal-wrapper {
-  z-index: 1;
+  z-index: 3;
   background-color: rgba(0, 0, 0, .5);
   position: fixed;
   top: 0;
